fdo#36555: pImplementationName is not a compile-time constant